# gamerhouse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  diff.txt  docker-compose.yml  game.csv  manage.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
catalog/: admin.py  models.py  urls.py
catalog/migrations/: 0001_initial.py  0002_game.py  0003_alter_genre_name_alter_platform_name.py
catalog/models/: __init__.py  game_models.py  genre_models.py  platform_models.py
catalog/serializers/: __init__.py  game_serializers.py  genre.py  platform.py
catalog/views/: __init__.py  game_views.py  genre.py  genre_views.py  platform.py  platform_views.py
core/: config.py  constants.py  context.py  enums.py  exceptions.py  logging.py  models.py  pagination.py  permissions.py  renderers.py  tasks.py  views.py
core/decorators/: __init__.py  cache_response.py  invalidate_cache.py
core/middleware/: __init__.py  json_errors_middleware.py  logging_middleware.py
docker/: entrypoint.sh
gamer_house/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
games/: filters.py  models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_alter_game_hours_played.py
genres/: apps.py
nginx/: gamerhouse.conf
payments/: admin.py  constants.py  enums.py  exceptions.py  tasks.py  urls.py
payments/migrations/: 0001_initial.py
payments/models/: __init__.py  payment_models.py  subscription_models.py  webhook_models.py
payments/serializers/: __init__.py  admin_serializers.py  order_serializers.py
payments/services/: __init__.py  payment_services.py  webhook_services.py
payments/views/: __init__.py  admin_views.py  (+3 more)
scripts/: deploy.sh
tenant_games/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
tenants/: models.py  permissions.py  serializers.py  urls.py  views.py
tests/: conftest.py
user_games/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/: authentication.py  managers.py  models.py  tasks.py  urls.py
(+64 files in other folders)
