[project]
name = "gamerhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.6.2",
    "django>=6.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.11",
    "python-json-logger>=4.0.0",
    "razorpay>=2.0.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.10",
]

